# libfreeform

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  biome.json  rustfmt.toml
.github/workflows/: ci.yml  release.yml
docs/: FORMAT.md
fixtures/: ink-pen.drawing  native-mixed.crlnative  native-mixed.expected.json  native-mixed.tsudescription  real-board.crlnative  real-board.tsudescription
libfreeform-wasm/: lib.rs
npm/: build.mjs  package.json
npm/src/: api.js  index.d.ts  index.js  index.node.js
src/: bplist.rs  crl.rs  decode.rs  lib.rs  pkdrawing.rs  types.rs
src/crl/: assets.rs  connector.rs  envelope.rs  native_ink.rs  shape.rs  text_table.rs
tests/: browser.html  browser.mjs  checks.mjs  package.json  serve.mjs  setup.mjs  smoke.mjs
tools/: dump_pasteboard.swift  release.mjs
